--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,11 @@ dependencies {
 	// AWS 서비스 의존성 추가
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
+	//Webflux
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	// macos 전용 netty server
+	implementation 'io.netty:netty-resolver-dns-native-macos'
+
 	// 테스트
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
